# Loxone-Recovery

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  LICENSE  README.md  hadolint.yaml  mypy.ini  pyproject.toml  requirements.txt  requirements_test.txt  requirements_test_pre_commit.txt  setup.cfg
.github/workflows/: ci.yaml  main.yml  pull.yml  release.yml
script/: setup.sh
src/: app.py  app.spec  recovery.py
